# hoggorm

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _config.yml  authors.md  paper.bib  paper.md  pca.py  plsr.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tgtest.txt  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: Cancer_men_perc.txt  Makefile  PCA with hoggorm.ipynb  PCA_with_hoggorm.html  conf.py  index.rst  main-methods.rst  make.bat  matrix_corr_coeff.rst  pca.rst  pcr.rst  plsr.rst  project-background.rst  quickstart.rst  utility-functions.rst
examples/: PCA_on_cancer_data.py  PCA_on_descriptive_sensory_analysis_data.ipynb  PCR_on_sensory_and_fluorescence_data.ipynb  PCR_on_sensory_and_fluorescence_data.py  PLSR_on_sensory_and_fluorescence_data.py  SMI example.ipynb
examples/.ipynb_checkpoints/: PCA_on_descriptive_sensory_analysis_data-checkpoint.ipynb  PCA_on_sensory_profiling_data_old-checkpoint.ipynb  PCR_on_sensory_and_fluorescence_data-checkpoint.ipynb  PLSR_on_sensory_and_fluorescence_data-checkpoint.ipynb
examples/PCA/: PCA_on_cancer_data.ipynb  PCA_on_descriptive_sensory_analysis_data.ipynb  PCA_on_descriptive_sensory_analysis_data.py  PCA_on_spectroscopy_data.ipynb  PCA_on_spectroscopy_data.py  cheese_sensory.txt  gasoline_octane.txt
examples/PCR/: PCR_on_sensory_and_fluorescence_data.ipynb  PCR_on_sensory_and_fluorescence_data.py  cheese_fluorescence.txt
examples/PLSR/: PLSR.ipynb  PLSR_on_NIR_and_octane_data.ipynb  PLSR_on_NIR_and_octane_data.py  PLSR_on_sensory_and_fluorescence_data.ipynb  PLSR_on_sensory_and_fluorescence_data.py  gasoline_NIR.txt
examples/PLSR/.ipynb_checkpoints/: PLSR_on_NIR_and_octane_data-checkpoint.ipynb
examples/RV_&_RV2/: Cancer_men_perc.txt  RV_and_RV2_on_sensory_and_fluorescence_data.ipynb  RV_and_RV2_on_sensory_and_fluorescence_data.py
examples/SMI/: SMI example.ipynb  SMI example.py  SMI_on_sensory_and_fluorescence.ipynb  SMI_on_sensory_and_fluorescence.py  SMI_pseudo-random_numbers.ipynb  SMI_pseudo-random_numbers.py
examples/data/: cheese_sensory.txt
hoggorm/: __init__.py  cross_val.py  mat_corr_coeff.py  mycheck.py  pca.py  pcr.py  plsr.py  plsr1.py  plsr2.py  statTools.py
tests/: conftest.py  data_cheese_fluo_newRand.tsv  parked_test_plsr.py  ref_PCA_x_cumCalExplVar.tsv  ref_PCA_x_cumCalExplVar_indVar.tsv  ref_PCR_x_cumCalExplVar_indVar.tsv  ref_PCR_y_cumCalExplVar.tsv  ref_PCR_y_cumCalExplVar_indVar.tsv  ref_PCR_y_loadings.tsv  ref_PLS1_x_cumCalExplVar.tsv  ref_PLS1_x_cumCalExplVar_indVar.tsv  ref_PLS1_y_corrLoadings.tsv  ref_PLS2_x_corrLoadings.tsv  ref_PLS2_x_cumCalExplVar_indVar.tsv  ref_PLS2_y_corrLoadings.tsv  ref_PLS2_y_cumCalExplVar.tsv  ref_PLS2_y_cumCalExplVar_indVar.tsv  ref_x_loadings.tsv  ref_x_scores.tsv  source_d_dat.tsv  test_pca.py  test_pcr.py  test_pls1.py  test_pls2.py  test_plsr.py
tests/test_data/: data_cheese_fluo.tsv  data_cheese_sensory.tsv  data_cheese_sensory_col2.tsv  data_cheese_sensory_newRand.tsv  ref_PCR_x_corrLoadings.tsv  ref_PCR_x_cumCalExplVar.tsv  ref_PCR_x_loadings.tsv  ref_PCR_x_scores.tsv  ref_PCR_y_corrLoadings.tsv  ref_PCR_y_cumCalExplVar_indVar.tsv  ref_PLS1_x_corrLoadings.tsv  ref_PLS1_x_loadings.tsv  ref_PLS1_x_scores.tsv  ref_PLS1_y_cumCalExplVar.tsv  ref_PLS1_y_loadings.tsv  ref_PLS2_x_cumCalExplVar.tsv  ref_PLS2_x_loadings.tsv  ref_PLS2_x_scores.tsv  ref_PLS2_y_cumCalExplVar_indVar.tsv  ref_PLS2_y_loadings.tsv  source_l_dat.tsv  source_s_dat.tsv
