[sdist]
# formats=zip
# keep-temp=0


[wheel]
universal=1


[metadata]
name = hoggorm
version = attr: hoggorm.__version__
description = Package for explorative multivariate statistics
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	statistic
	education
	science
url = https://github.com/olivertomic/hoggorm
download_url = https://pypi.python.org/pypi/hoggorm
author = Oliver Tomic
author_email = oliver.tomic@nmbu.no
# maintainer = Thomas Graff
# maintainer_email = graff.thomas@gmail.com
classifiers =
	Natural Language :: English
	Development Status :: 4 - Beta
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
	Topic :: Scientific/Engineering :: Mathematics
license = BSD License
platforms = any
