[metadata]
name = hoggorm
version=0.13.3
description = Package for explorative multivariate statistics.
author = Oliver Tomic
author-email = oliver.tomic@nmbu.no
license= BSD license
url = https://github.com/olivertomic/hoggorm
long-description = file: README.rst
platforms = any
keywords=
	hoggorm
	statistic
	education
	science
classifiers =
	Development Status :: 4 - Beta
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
	Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires=>=3.5
install_requires =
    numpy >= 1.11.3
	
[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
	bump2version==0.5.11
	watchdog==0.9.0
	tox==3.14.0
	sphinx==1.8.5
	twine==1.14.0
	
test = 
	pytest==4.6.5
	pytest-runner==5.1
	pytest-cov
	coverage==4.5.4
	flake8==3.7.8
	codecov


[test]
extras = True

[tool:pytest]
addopts =
    --cov hoggorm --cov-report term-missing:skip-covered --cov-report xml
    --verbose
norecursedirs =
    dist
    build
    .tox


[bdist_wheel]
universal = 1

[flake8]
exclude = docs,examples
max-line-length = 140
# some of rules are only temporarly ignored
ignore=E402,F841,F401,W504,E501,E722,E741

[aliases]
# Define setup.py command aliases here
test = pytest

[bumpversion]
current_version = 0.13.3
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:hoggorm/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'